--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
     <title $text="$[$router.schemes.title] || $router.schemes.title">loading...</title>
   </head>
-  <body dg-cloak>
+  <body dg-cloak $loading="{ isMenuClosed: true }">
     <div id="header">
       <h1>🗡️ dagger.js</h1>
       <a id="github-link" href="https://github.com/dagger8224/dagger.js">${ $.viewOnGithub }</a>
@@ -41,14 +41,15 @@
         <option $each="$.languages" $text="item" $value="key"></option>
       </select>
     </div>
-    <div id="navigator">
+    <div id="navigator" $class="{'closed-menu': isMenuClosed}">
       <h3>${ $.index }</h3>
-      <ul $each#item:topic="menus" $loading="{ className: '' }" $class="className">
+      <ul $each#item:topic="menus" $loading="{ className: ''}" $class="className">
         <div +click="className = className ? '' : 'hidden'">
           <span class="prefix">${ className ? '+' : '-' }</span><span>${ $[topic.text] || topic.text }</span>
         </div>
         <li $each#item:section="topic.sections" +click="location.href = `#/${ section.href }`" $class="{active: Object.is(`/${ section.href }`, $router.path), 'sub-directive': section.text.startsWith('$')}">${ $[section.text] || section.text }</li>
       </ul>
+      <div class="bottom-switcher button" +click="isMenuClosed=!isMenuClosed"><span>${ isMenuClosed ? "》" : "《" }</span></div>
     </div>
     <div id="content" $sentry="document.querySelector('html').scrollTop = 0;">
       <template $html="`<${ $router.schemes.template }></${ $router.schemes.template }>`"></template>
