update directive demo

--- a/directive/raw_demo.html
+++ b/directive/raw_demo.html
@@ -7,4 +7,4 @@
 <div $style="'border: 1px dashed blue; padding: 3px 10px;'">
     <span>${ Math.PI }</span>
     <button +click="alert('hello dagger!')">alert something</button>
-</div
+</div>
