--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!--<link rel="stylesheet" href="css.css" media="print" onload="media = 'all'">-->
     <style>[dg-cloak] { display: none !important; }</style>
     <link rel="stylesheet" href="./index.css">
-    <script type="module" integrity1="sha256-UVLTY4tkDonqozxecKeS5oocsoB13Y/NF8LGOc4eWZ0=" crossorigin="anonymous" src="./src/dagger.js" defer></script>
-    <script type="dagger/configs" integrity1="CV7omJ8n3bMRVSdloGsIeJTnvfc6By4UTXna5C+7CHw=" src="./configs.json"></script>
+    <script type="module" integrity="sha256-WWzLwa7l4nbNl7Fbum80foH4n67RpD2hFXPApnbqnNc=" crossorigin="anonymous" src="./src/dagger.js" defer></script>
+    <script type="dagger/configs" src="./configs.json"></script>
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.21.2/min/vs/loader.min.js"></script>
     <script>
         require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.21.2/min/vs' }});
