--- a/overview/version.html
+++ b/overview/version.html
@@ -13,26 +13,26 @@
     <div class="section">
       <h2>${ $['overview.version'] }</h2>
       <span>${ $['overview.version.content'] }</span>
-      <span class="bold">"${ $dagger.version }"</span>
+      <span class="bold">"0.9.6"</span>
       <span>${ $.period || '.' }</span>
     </div>
     <div class="section">
       <div $html="$['overview.version.files']"></div>
       1. 
-      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js/dagger.js">dagger.js</a>
+      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.6/dagger.js">dagger.js</a>
       <div style="display: inline-block;" $html="$['dagger.js']"></div>
       <br/>
       2. 
-      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js/dagger.min.js">dagger.min.js</a>
+      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.6/dagger.min.js">dagger.min.js</a>
       <div style="display: inline-block;" $html="$['dagger.min.js']"></div>
       <br/>
       3. 
-      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js/dagger.release.js">dagger.release.js</a>
+      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.6/dagger.release.js">dagger.release.js</a>
       
       <div style="display: inline-block;" $html="$['dagger.release.js']"></div>
       <br/>
       4. 
-      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js/dagger.release.min.js">dagger.release.min.js</a>
+      <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.6/dagger.release.min.js">dagger.release.min.js</a>
       <div style="display: inline-block;" $html="$['dagger.release.min.js']"></div>
     </div>
     <div class="section">
