--- a/directive/boolean_demo.html
+++ b/directive/boolean_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ enabled: true, readonly: false }">
+<div +loading="{ enabled: true, readonly: false }">
     <button +click="enabled = !enabled">toggle enabled: ${ enabled }</button>
     <button +click="readonly = !readonly">toggle readonly: ${ readonly }</button>
     <br/>
