--- a/directive/checked_demo.html
+++ b/directive/checked_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ checkedArray1: [true], checkedArray2: [false, true, true], checkedArray3: [false, true, true], checkedArray4: [false, true, true] }">
+<div +loading="{ checkedArray1: [true], checkedArray2: [false, true, true], checkedArray3: [false, true, true], checkedArray4: [false, true, true] }">
     <span>${ JSON.stringify(checkedArray1) }</span>
     <br/>
     <input type="checkbox" name="checkbox-group" $checked="checkedArray1[0]">1st checkbox</input>
