--- a/directive/class_demo.html
+++ b/directive/class_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ index: 0, selectedClass: null, classes: ['className1 className2', ['className3', 'className4'], { className5: true, className6: false }, 1234, null] }">
+<div +loading="{ index: 0, selectedClass: null, classes: ['className1 className2', ['className3', 'className4'], { className5: true, className6: false }, 1234, null] }">
     <style>
         .default-class {
             border: 1px solid #aaaaaa;
