--- a/directive/focus_demo.html
+++ b/directive/focus_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ focus: true }">
+<div +loading="{ focus: true }">
     <button +click="focus = !focus">toggle focus</button>
     <input placeholder="input here" $focus="focus">
 </div>
