--- a/directive/general_demo.html
+++ b/directive/general_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ id: 'span-id', placeholder: 'input here', rows: 5 }">
+<div +loading="{ id: 'span-id', placeholder: 'input here', rows: 5 }">
     <span $id="id">I'm a SPAN with id "${ id }"</span>
     <br/>
     <input $placeholder="placeholder" $value="rows">
