--- a/directive/selected_demo.html
+++ b/directive/selected_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ selectedArray1: ['b', 'c'], selectedValue1: 'c', selectedValue2: 'c', selectedArray2: ['b', 'c'] }">
+<div +loading="{ selectedArray1: ['b', 'c'], selectedValue1: 'c', selectedValue2: 'c', selectedArray2: ['b', 'c'] }">
     <span>${ JSON.stringify(selectedArray1) }</span>
     <br/>
     <input type="checkbox" name="checkbox-group" $selected="selectedArray1" value="a">1st checkbox</input>
