--- a/router/introduction_demo.html
+++ b/router/introduction_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ hash: 'directive/html' }">
+<div +loading="{ hash: 'directive/html' }">
   <a href="directive/introduction">directive/introduction</a>
   <br/>
   <a href="#/directive/checked">directive/checked</a>
@@ -11,7 +11,7 @@
   <br/>
   <a href="invalid">invalid router (not defined in routing configs)</a>
   <br/>
-  <a href="blocked">block (will be blocked by "$sentry" declared on html tag)</a>
+  <a href="blocked">block (will be blocked by "+sentry" declared on html tag)</a>
   <br/>
   <a href="/directive/class">/directive/class (not hash)</a>
   <br/>
