--- a/directive/introduction.html
+++ b/directive/introduction.html
@@ -11,7 +11,7 @@
   </script>
   <template id="template">
     <h2>${ $['directive.introduction'] }</h2>
-    <div class="content">
+    <div class="content" +loading="defaultHtml = html = $module.demo">
       <template $each="$['directive.introduction.sections']">
         <h3 class="question">${ item.question }</h3>
         <div class="answer" $html="item.answer"></div>
