--- a/directive/text_demo.html
+++ b/directive/text_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ text: 'I\'m text content.' }">
+<div +loading="{ text: 'I\'m text content.' }">
     <span $text="text">I will be replaced by $text directive.</span>
     <div>I'm an implicit $text directive expression, the value of PI is: "${ Math.PI }".</div>
     <div>show raw content: ${ "${ Math.PI }" }</div>
