--- a/directive/value_demo.html
+++ b/directive/value_demo.html
@@ -1,4 +1,4 @@
-<div $loading="{ value: 'string', array: [1, 2, 3], object: { m: 2, n: 3 }, selected: null, date: new Date() }">
+<div +loading="{ value: 'string', array: [1, 2, 3], object: { m: 2, n: 3 }, selected: null, date: new Date() }">
     <input $value="value"><label>the text input value: ${ value }</label>
     <br/>
     <textarea $value="value"></textarea>
