--- a/module/demo/namespace.html
+++ b/module/demo/namespace.html
@@ -15,7 +15,7 @@
             }
         </style>
         <template id="inner_template1">
-            <div $loading="{ data: {} }">
+            <div +loading="{ data: {} }">
                 <span>${ data.value }</span>
             </div>
         </template>
