--- a/module/script.html
+++ b/module/script.html
@@ -6,12 +6,16 @@
           "uri": "#template",
           "style": "style"
       },
-      "style": "#style"
+      "style": "#style",
+      "demo": {
+          "uri": "./script_demo.json",
+          "type": "string"
+      }
     }
   </script>
   <template id="template">
     <h2>${ $['module.script'] }</h2>
-    <div class="content">
+    <div class="content" +loading="defaultHtml = html = $module.demo">
       <template $each="$['module.script.sections']">
         <h3 class="question">${ item.question }</h3>
         <div class="answer" $html="item.answer"></div>
