--- a/directive/controller.html
+++ b/directive/controller.html
@@ -11,7 +11,7 @@
   </script>
   <template id="template">
     <h2>${ $['directive.controller'] }</h2>
-    <div class="content" +loading="defaultHtml = html = $module.demo">
+    <div class="content">
       <template $each="$['directive.controller.sections']">
         <h3 class="question">${ item.question }</h3>
         <div class="answer" $html="item.answer"></div>
