--- a/module/namespace.html
+++ b/module/namespace.html
@@ -15,7 +15,7 @@
   </script>
   <template id="template">
     <h2>${ $['module.namespace'] }</h2>
-    <div class="content" +loading="defaultHtml = html = $module.demo">
+    <div class="content">
       <template $each="$['module.namespace.sections']">
         <h3 class="question">${ item.question }</h3>
         <div class="answer" $html="item.answer"></div>
