--- a/router/structure.html
+++ b/router/structure.html
@@ -15,7 +15,7 @@
   </script>
   <template id="template">
     <h2>${ $['router.structure'] }</h2>
-    <div class="content" +loading="defaultHtml = html = $module.demo">
+    <div class="content">
       <template $each="$['router.structure.sections']">
         <h3 class="question">${ item.question }</h3>
         <div class="answer" $html="item.answer"></div>
