--- a/overview/hello_dagger.html
+++ b/overview/hello_dagger.html
@@ -11,12 +11,12 @@
       <div class="content">
         <h3 class="question">示例说明</h3>
         <div class="answer">
-          下面窗口中展示的是我们的第一个dagger.js实例：点击结果区域内的click按钮将弹出字符串“Hello dagger!”。这个简单的小例子演示了dagger.js的核心工作流程：body元素上声明的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/loading">+loading</a>”构造了一个<a href="scope/introduction">作用域</a>对象，按钮元素上声明的<a href="directive/eventHandler">事件处理指令</a>“+click”负责在用户点击时将作用域下“message”字段的值展示在alert弹窗当中。在接下来的章节中，我们将对以上概念分别进行讲解。
+          下面窗口中展示的是我们的第一个dagger.js实例：点击结果区域内的按钮将弹出字符串“Hello dagger!”。这个简单的小例子演示了dagger.js的核心工作流程：div元素上声明的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/loading">+loading</a>”构造了一个<a href="scope/introduction">作用域</a>对象“$scope”，按钮元素上声明的<a href="directive/eventHandler">事件处理指令</a>“+click”负责在用户点击时将作用域下“message”字段的值展示在alert弹窗当中。在接下来的章节中，我们将对以上概念分别进行讲解。
         </div>
       </div>
       <h3 class="question">提示</h3>
-      <div class="answer">你可以修改示例代码中“+loading”指令等号右侧双引号内作用域对象的内容，查看代码对程序结果的影响。</div>
-      <iframe src="https://codepen.io/dagger8224/pen/ZErWBpB?editors=1000"></iframe>
+      <div class="answer">你可以修改示例代码中“+loading”指令等号右侧作用域对象的内容，查看代码对程序结果的影响。</div>
+      <iframe src="https://codepen.io/dagger8224/pen/abqNQre?editors=1000"></iframe>
     </template>
     <template $exist="language == 'en-us'">
       <div class="section">
