--- a/overview/introduction.html
+++ b/overview/introduction.html
@@ -15,11 +15,11 @@
         </div>
         <h3 class="question">dagger.js适合哪些开发者</h3>
         <div class="answer">
-          <span>无论你是一个有经验的专业开发人员还是对web前端开发领域感兴趣的业余爱好者，只要具有基础的原生<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML">html</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript">javaScript</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">css</a>背景知识，都可以在短时间内理解和掌握dagger.js。</span>
+          <span>无论你是一个有经验的专业开发人员还是对web前端开发领域感兴趣的业余爱好者，只要有原生<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML">html</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript">javaScript</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">css</a>背景知识作为基础，都可以在短时间内理解和掌握dagger.js。</span>
         </div>
         <h3 class="question">学习路线</h3>
         <div class="answer">
-          <span>dagger.js中的核心概念包括：<a href="directive/introduction">指令</a>，<a href="scope/introduction">作用域</a>，<a href="module/introduction">模块</a>，<a href="router/introduction">路由</a>。同时，框架也提供了少量的<a href="api/introduction">api方法</a>（dagger.js以声明方式工作，在大多数业务场景下，开发者不需要调用这些api即可完成开发任务）。本文档围绕以上概念组织章节结构，在每个章节内都提供了与内容关联的使用示例。不必担心，dagger.js相当易于学习和使用。现在让我们开始dagger.js的体验之旅吧。</span>
+          <span>dagger.js中的核心概念包括：<a href="directive/introduction">指令</a>，<a href="scope/introduction">作用域</a>，<a href="module/introduction">模块</a>，<a href="router/introduction">路由</a>。同时，框架也提供了少量的<a href="api/introduction">api方法</a>（dagger.js以声明方式工作，在大多数业务场景下，开发者不需要调用这些api即可完成开发任务）。本文档围绕以上概念组织章节结构，在每个章节内都提供了与内容关联的使用示例。现在让我们开始dagger.js的体验之旅吧。</span>
         </div>
       </div>
     </template>
