--- a/overview/hello_dagger.html
+++ b/overview/hello_dagger.html
@@ -1,53 +1,47 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": "#template"
-    }
-  </script>
-  <template id="template">
-    <template $exist="language == 'zh-cn'">
-      <h2>概览/Hello dagger</h2>
-      <div class="content">
-        <h3 class="question">示例说明</h3>
-        <div class="answer">
-          下面窗口中展示的是我们的第一个dagger.js实例：点击结果区域内的按钮将弹出字符串“Hello dagger!”。这个简单的小例子演示了dagger.js的核心工作流程：div元素上声明的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/loading">+loading</a>”构造了一个<a href="scope/introduction">作用域</a>对象“$scope”，按钮元素上声明的<a href="directive/eventHandler">事件处理指令</a>“+click”负责在用户点击时将作用域下“message”字段的值展示在alert弹窗当中。在接下来的章节中，我们将对以上概念分别进行讲解。
-        </div>
-      </div>
-      <h3 class="question">提示</h3>
-      <div class="answer">你可以修改示例代码中“+loading”指令等号右侧作用域对象的内容，查看代码对程序结果的影响。</div>
-      <iframe src="https://codepen.io/dagger8224/pen/abqNQre?editors=1000"></iframe>
-    </template>
-    <template $exist="language == 'en-us'">
-      <div class="section">
-        <h2>${ $['overview.version'] }</h2>
-        <span>${ $['overview.version.content'] }</span>
-        <span class="bold">"0.9.10"</span>
-        <span>${ $.period || '.' }</span>
-      </div>
-      <div class="section">
-        <div $html="$['overview.version.files']"></div>
-        1. 
-        <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.js">dagger.js</a>
-        <div style="display: inline-block;" $html="$['dagger.js']"></div>
-        <br/>
-        2. 
-        <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.min.js">dagger.min.js</a>
-        <div style="display: inline-block;" $html="$['dagger.min.js']"></div>
-        <br/>
-        3. 
-        <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.release.js">dagger.release.js</a>
-        
-        <div style="display: inline-block;" $html="$['dagger.release.js']"></div>
-        <br/>
-        4. 
-        <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.release.min.js">dagger.release.min.js</a>
-        <div style="display: inline-block;" $html="$['dagger.release.min.js']"></div>
-      </div>
-      <div class="section">
-        <h3>${ $.compatibility }</h3>
-        <div $html="$['compatibility.content']"></div>
-      </div>
-    </template>
-  </template>
-</html>
+<template $exist="language == 'zh-cn'">
+  <h2>${ $['overview.hello_dagger'] }</h2>
+  <div class="content">
+    <h3 class="question">示例说明</h3>
+    <div class="answer">
+      <p>下面窗口中展示的是我们的第一个dagger.js实例：点击结果区域内的按钮将弹出字符串“Hello dagger!”。</p><p>实例代码演示了dagger.js的核心工作流程：div元素上的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/loading">+loading</a>”构造出一个<a href="scope/introduction">作用域</a>对象“$scope”，按钮元素上的<a href="directive/eventHandler">事件处理指令</a>“+click”在用户点击时将作用域下“message”字段的值展示在alert弹窗当中。</p><p>这是我们第一次接触指令和作用域的概念，现在不理解上述的工作流程请无需担心。在接下来的章节中，我们会对这些概念分别进行详细讲解。</p>
+    </div>
+  </div>
+  <h3 class="question">提示</h3>
+  <div class="answer">你可以修改示例代码中“+loading”指令等号右侧作用域对象的内容，查看代码对程序结果的影响。</div>
+  <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] Hello dagger!" src="https://codepen.io/dagger8224/embed/abqNQre?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+    See the Pen <a href="https://codepen.io/dagger8224/pen/abqNQre">
+    [dagger-demo] Hello dagger!</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+    on <a href="https://codepen.io">CodePen</a>.
+  </iframe>
+</template>
+<template $exist="language == 'en-us'">
+  <div class="section">
+    <h2>${ $['overview.version'] }</h2>
+    <span>${ $['overview.version.content'] }</span>
+    <span class="bold">"0.9.10"</span>
+    <span>${ $.period || '.' }</span>
+  </div>
+  <div class="section">
+    <div $html="$['overview.version.files']"></div>
+    1. 
+    <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.js">dagger.js</a>
+    <div style="display: inline-block;" $html="$['dagger.js']"></div>
+    <br/>
+    2. 
+    <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.min.js">dagger.min.js</a>
+    <div style="display: inline-block;" $html="$['dagger.min.js']"></div>
+    <br/>
+    3. 
+    <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.release.js">dagger.release.js</a>
+    
+    <div style="display: inline-block;" $html="$['dagger.release.js']"></div>
+    <br/>
+    4. 
+    <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.10/dagger.release.min.js">dagger.release.min.js</a>
+    <div style="display: inline-block;" $html="$['dagger.release.min.js']"></div>
+  </div>
+  <div class="section">
+    <h3>${ $.compatibility }</h3>
+    <div $html="$['compatibility.content']"></div>
+  </div>
+</template>
