--- a/overview/hello_dagger.html
+++ b/overview/hello_dagger.html
@@ -3,7 +3,7 @@
   <div class="content">
     <h3 class="question">示例说明</h3>
     <div class="answer">
-      <p>下面窗口中展示的是我们的第一个dagger.js实例：点击结果区域内的按钮将弹出字符串“Hello dagger!”。</p><p>实例代码演示了dagger.js的核心工作流程：div元素上的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/loading">+loading</a>”构造出一个<a href="scope/introduction">作用域</a>对象“$scope”，按钮元素上的<a href="directive/eventHandler">事件处理指令</a>“+click”在用户点击时将作用域下“message”字段的值展示在alert弹窗当中。</p><p>这是我们第一次接触指令和作用域的概念，现在不理解上述的工作流程请无需担心。在接下来的章节中，我们会对这些概念分别进行详细讲解。</p>
+      <p>下面窗口中展示的是我们的第一个dagger.js实例：点击结果区域内的按钮将弹出字符串“Hello dagger!”。</p><p>实例代码演示了dagger.js的核心工作流程：div上的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/loading">+loading</a>”构造出一个<a href="scope/introduction">作用域</a>对象“$scope”，按钮上的<a href="directive/eventHandler">事件处理指令</a>“+click”在用户点击时将作用域下“message”字段的值展示在alert弹窗当中。</p><p>这是我们第一次接触指令和作用域的概念，现在不理解上述的工作流程请无需担心。在接下来的章节中，我们会对这些概念分别进行详细讲解。</p>
     </div>
   </div>
   <h3 class="question">提示</h3>
